# frontend-dev-assistant-mcp

./: .gitignore  Cursor连接指南.md  Dockerfile.api  INSTALL.md  MCP使用手册.md  MCP调用追踪系统.md  README.md  add_test_data.py  browser_extension_guide.md  cursor_config.md  cursor_mcp_config.json  debug_mcp.py  distribute-to-team.sh  docker-compose.yml  get_mcp_stats.py  init.sql  live_test.py  mcp_stats.py  pyproject.toml  quick-setup.bat  quick-setup.sh  requirements.txt  run_mcp.sh  run_mcp_direct.sh  run_mcp_server.py  simple_start.py  start_mcp.py  static_prompts.md  test_all.py  test_enhanced_usage_tracker.py  test_git_integration.py  test_mcp.py  test_server.py  test_simple.py  view_data.py  前端开发助手MCP文档.md  团队分发指南.md  组件查找算法原理.md
.cursor/: mcp.json
dashboard_env/: pyvenv.cfg
data/: README.md
docs/: Cursor连接指南.md  MCP使用手册.md  static_prompts.md  组件查找算法原理.md
exports/: mcp_report_all_20250613_115513.md  mcp_report_month_20250613_115513.md  mcp_report_today_20250613_115513.md  mcp_report_week_20250613_115513.md
scripts/: check_data_location.py  export_usage_data.py  quick-setup.bat  setup_database.py  start_api_server.py  start_full_system.sh
src/: __init__.py  component_generator.py  server.py  usage_tracker.py
src/analytics_api/: __init__.py  database.py  enhanced_git_client.py  git_analyzer.py  git_endpoints.py  git_mcp_client.py  local_git_analyzer.py  mcp_data_service.py  models.py  server.py  simple_database.py
src/components/: CustomForm.vue
src/data/: mcp_calls.json  usage_stats.json
src/frontend_dev_assistant/: __init__.py  call_tracker.py  cloud_usage_tracker.py  component_finder.py  component_generator.py  prompt_manager.py  server.py  session_initializer.py  usage_tracker.py
src/mcp_local/: server.py  usage_tracker.py
src/templates/: default_templates.json
tests/: test_server.py
(+3 files in other folders)
